--- a/css/styles.scss
+++ b/css/styles.scss
@@ -255,12 +255,12 @@ h3.portfolio-sub {
 
  .portfolio-link {
    float: right;
-   color: $light-blue;
+   color: lightyellow;
  }
 
  .portfolio-link a{
    font-family: $heading-font;
-   color: white;
+   color: $light-blue;
  }
 
  .nav-col {
@@ -435,11 +435,9 @@ ul.resume-main {
 }
 
 .soc-freecodecamp {
-  background-color: #006400;
-}
-
-.soc-freecodecamp:before {
-  content:'x';
+  background-color: white;
+  background-image: url('./fonts/fcc_puckRoundedCorners600.png');
+  background-size: 100% 100%;
 }
 
 .row-flex, .row-flex > div[class*='col-'] {
