--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,7 @@ img.ri {
 Main content
 **************************/
 .main-content {
+  min-height: 611px;
   margin: 1em 2em 1em 2em;
   padding: 1em;
   border: 20px solid;
@@ -173,6 +174,9 @@ h3.portfolio-sub {
   border-radius: 2px;
   margin: 1.5em; }
 
+.content2 {
+  height: 228px; }
+
 @media only screen and (max-width: 450px) {
   .portfolio-img-bike {
     float: none;
@@ -227,6 +231,9 @@ h3.portfolio-sub {
 /***********************
 Resume Space
 ************************/
+.body {
+  margin-left: 10%; }
+
 #resume-space {
   padding: 0.5em; }
 
