--- a/css/styles.scss
+++ b/css/styles.scss
@@ -95,6 +95,7 @@ Main content
 **************************/
 
 .main-content {
+  min-height: 611px;
   margin: 1em 2em 1em 2em;
   padding: 1em;
   border: 20px solid;
@@ -235,6 +236,10 @@ h3.portfolio-sub {
    margin: 1.5em;
  }
 
+ .content2 {
+   height: 228px;
+ }
+
  @media only screen and (max-width: 450px) {
    .portfolio-img-bike {
      float: none;
@@ -300,6 +305,10 @@ h3.portfolio-sub {
 /***********************
 Resume Space
 ************************/
+
+.body {
+  margin-left: 10%;
+}
 
 #resume-space {
   padding:0.5em;
