--- a/css/styles.scss
+++ b/css/styles.scss
@@ -235,10 +235,10 @@ h3.portfolio-sub {
    border-radius: 2px;
    margin: 1.5em;
  }
-
- .content2 {
-   height: 228px;
- }
+ //
+ // .content2 {
+ //   height: 228px;
+ // }
 
  @media only screen and (max-width: 450px) {
    .portfolio-img-bike {
@@ -308,6 +308,13 @@ Resume Space
 
 .body {
   margin-left: 10%;
+}
+
+@media only screen and (max-width: 450px) {
+  .body {
+    margin-left: 5%;
+    padding-right: 5%;
+  }
 }
 
 #resume-space {
