fix issues with responsive styling

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -111,7 +111,7 @@ Main content
 
 @media only screen and (max-width: 600px) {
   .main-content {
-      margin: 0;
+      margin: 0 2em 0 0;
   }
   img.ri {
     left: 5%
