--- a/css/styles.scss
+++ b/css/styles.scss
@@ -95,7 +95,6 @@ Main content
 **************************/
 
 .main-content {
-  min-height: 611px;
   margin: 1em 2em 1em 2em;
   padding: 1em;
   border: 20px solid;
@@ -111,7 +110,7 @@ Main content
 
 @media only screen and (max-width: 600px) {
   .main-content {
-      margin: 0 2em 0 0;
+      margin: 0;
   }
   img.ri {
     left: 5%
@@ -235,10 +234,6 @@ h3.portfolio-sub {
    border-radius: 2px;
    margin: 1.5em;
  }
- //
- // .content2 {
- //   height: 228px;
- // }
 
  @media only screen and (max-width: 450px) {
    .portfolio-img-bike {
@@ -260,12 +255,12 @@ h3.portfolio-sub {
 
  .portfolio-link {
    float: right;
-   color: lightyellow;
+   color: $light-blue;
  }
 
  .portfolio-link a{
    font-family: $heading-font;
-   color: $light-blue;
+   color: white;
  }
 
  .nav-col {
@@ -305,17 +300,6 @@ h3.portfolio-sub {
 /***********************
 Resume Space
 ************************/
-
-.body {
-  margin-left: 10%;
-}
-
-@media only screen and (max-width: 450px) {
-  .body {
-    margin-left: 5%;
-    padding-right: 5%;
-  }
-}
 
 #resume-space {
   padding:0.5em;
@@ -451,9 +435,11 @@ ul.resume-main {
 }
 
 .soc-freecodecamp {
-  background-color: white;
-  background-image: url('./fonts/fcc_puckRoundedCorners600.png');
-  background-size: 100% 100%;
+  background-color: #006400;
+}
+
+.soc-freecodecamp:before {
+  content:'x';
 }
 
 .row-flex, .row-flex > div[class*='col-'] {
