update front pictures

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,6 @@ img.ri {
 Main content
 **************************/
 .main-content {
-  min-height: 611px;
   margin: 1em 2em 1em 2em;
   padding: 1em;
   border: 20px solid;
@@ -72,7 +71,7 @@ Main content
     border: none; } }
 @media only screen and (max-width: 600px) {
   .main-content {
-    margin: 0; }
+    margin: 0 2em 0 0; }
 
   img.ri {
     left: 5%; }
@@ -191,11 +190,11 @@ h3.portfolio-sub {
     text-align: center; } }
 .portfolio-link {
   float: right;
-  color: lightyellow; }
+  color: #7ABEC9; }
 
 .portfolio-link a {
   font-family: "Vollkorn", serif;
-  color: #7ABEC9; }
+  color: white; }
 
 .nav-col {
   width: 180px; }
@@ -228,13 +227,6 @@ h3.portfolio-sub {
 /***********************
 Resume Space
 ************************/
-.body {
-  margin-left: 10%; }
-
-@media only screen and (max-width: 450px) {
-  .body {
-    margin-left: 5%;
-    padding-right: 5%; } }
 #resume-space {
   padding: 0.5em; }
 
@@ -377,11 +369,16 @@ ul.resume-main {
   display: -webkit-flex;
   /* Safari */
   display: flex;
-  -webkit-justify-content: space-around;
+  -webkit-justify-content: space-between;
   /* Safari */
-  justify-content: space-around; }
+  justify-content: space-between; }
 
 .flex-container img {
   padding: 5px; }
+
+.bio-photos img {
+  margin-left: 15%;
+  margin-bottom: 10px;
+  max-width: 75%; }
 
 /*# sourceMappingURL=styles.css.map */
